# contextforge-plugins-framework

./: .env.example  .gitignore  .yamllint  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report-code.md  chore-task--devops--linting--maintenance-.md  docs-issue.md  feature-request.md  testing--bug--unit--manual--or-new-test-.md
.github/workflows/: lint.yml
cpex/framework/: __init__.py  base.py  constants.py  decorator.py  errors.py  manager.py  memory.py  models.py  observability.py  protocols.py  registry.py  settings.py  utils.py  validators.py
cpex/framework/cmf/: __init__.py  message.py  view.py
cpex/framework/extensions/: __init__.py  agent.py  completion.py  constants.py  delegation.py  extensions.py  framework.py  http.py  llm.py  mcp.py  meta.py  provenance.py  request.py  security.py  tiers.py
cpex/framework/hooks/: agents.py  http.py  identity.py  message.py  policies.py  resources.py  tools.py
cpex/framework/isolated/: client.py  venv_comm.py  worker.py
cpex/framework/loader/: config.py  plugin.py
cpex/framework/pdp/: __init__.py  authzen.py  base.py  opa.py
cpex/templates/isolated/{{cookiecutter.plugin_slug}}/: config.yaml  plugin-manifest.yaml  requirements.txt
cpex/templates/native/{{cookiecutter.plugin_slug}}/: plugin.py
cpex/tools/: catalog.py  cli.py  plugin_registry.py  settings.py
docs/content/docs/: cmf.md  configuration.md  execution-modes.md  extensions.md  external-plugins.md  isolated-plugins.md
docs/specs/: cmf-message-spec.md  plugin-framework-spec.md
tests/unit/cpex/fixtures/configs/: agent_context.yaml  agent_filter.yaml  agent_passthrough.yaml  context_multiplugins.yaml  context_plugin.yaml  context_stdio_external_plugins.yaml  cross_hook_context.yaml  error_plugin.yaml  error_plugin_raise_error_false.yaml  error_stdio_external_plugin.yaml  extensions_aware_plugin.yaml  extensions_custom_plugin.yaml  extensions_label_plugin.yaml  init_hooks_plugins_test.yaml  invalid_single_plugin.yaml  isolated_plugin.yaml  test_hook_patterns_config.yaml  tool_headers_metadata_plugin.yaml  tool_headers_plugin.yaml  valid_grpc_external_plugin.yaml  valid_grpc_external_plugin_manager.yaml  valid_multiple_plugins.yaml  valid_multiple_plugins_filter.yaml  valid_no_plugin.yaml  valid_single_filter_plugin.yaml  valid_single_plugin.yaml  valid_single_plugin_passthrough.yaml  valid_stdio_external_plugin.yaml  valid_stdio_external_plugin_overrides.yaml  valid_stdio_external_plugin_passthrough.yaml  valid_stdio_external_plugin_regex.yaml  valid_strhttp_external_plugin_overrides.yaml  valid_strhttp_external_plugin_regex.yaml  valid_tool_hooks.yaml  valid_unix_external_plugin.yaml  valid_unix_external_plugin_manager.yaml
tests/unit/cpex/fixtures/plugins/: agent_plugins.py  context.py  deny_filter.py  error.py  extensions_aware.py  headers.py  passthrough.py
tests/unit/cpex/fixtures/plugins/isolated/test_plugin/: requirements.txt
tests/unit/cpex/framework/: __init__.py  test_content_type_matching.py  test_context.py  test_errors.py  test_executor_context_concurrency.py  test_extensions_integration.py  test_manager.py  test_manager_coverage.py  test_manager_extended.py  test_manager_extensions.py  test_manager_runtime_disabled.py  test_memory.py  test_models_http_fields.py  test_models_package_version.py  test_models_tls.py  test_models_user_context.py  test_observability.py  test_plugin_base.py  test_plugin_base_coverage.py  test_plugin_models.py  test_plugin_models_coverage.py  test_plugin_modes.py  test_policies.py  test_registry.py  test_resource_hooks.py  test_settings.py  test_tenant_plugin_manager.py  test_utils.py  test_utils_and_logic.py  test_validators.py
tests/unit/cpex/framework/cmf/: test_message.py  test_view.py
tests/unit/cpex/framework/extensions/: test_delegation.py  test_extensions.py  test_tiers.py
tests/unit/cpex/framework/hooks/: test_hook_patterns.py  test_hook_registry.py  test_http.py  test_identity.py  test_message.py
tests/unit/cpex/framework/isolated/: README.md  __init__.py  conftest.py  test_client.py  test_integration.py  test_venv_comm.py  test_worker.py
tests/unit/cpex/framework/loader/: __init__.py  test_plugin_loader.py
tests/unit/cpex/tools/: test_catalog.py  test_cli.py
