[project]
name = "cpex"
version = "0.1.0"
description = "Cpex - ContextForge Plugin Extensibility Framework"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license-files = ["LICENSE*"]
readme = "README.md"
authors = [
    { name = "Fred Araujo", email = "frederico.araujo@ibm.com" },
    { name = "Mihai Criveti", email = "redacted@ibm.com"},
    { name = "Teryl Taylor", email = "terylt@ibm.com" },
]
maintainers = [
    { name = "Fred Araujo", email = "frederico.araujo@ibm.com" },
    { name = "Jonathan Springer", email = "redacted@ibm.com" },
    { name = "Teryl Taylor", email = "terylt@ibm.com" },
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.6",
    "mcp>=1.26.0",
    "orjson>=3.11.7",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "build>=1.0.0",
    "mypy>=1.11.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-dotenv>=0.5.2",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "twine>=5.0.0",
    "types-PyYAML>=6.0.0",
]
docs = [
    "griffe-pydantic",
    "griffe_inherited_docstrings",
    "mkdocs-awesome-nav",
    "mkdocs-click",
    "mkdocs-enumerate-headings-plugin",
    "mkdocs-include-markdown-plugin>=7.1.8",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocstrings[python]",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cpex"]
