[project]
name = "cpex"
version = "0.1.0.dev3"
description = "CPEX - ContextForge Plugin Extensibility Framework"
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license-files = ["LICENSE*"]
readme = "README.md"
authors = [
    { name = "Fred Araujo", email = "frederico.araujo@ibm.com" },
    { name = "Mihai Criveti", email = "redacted@ibm.com"},
    { name = "Teryl Taylor", email = "terylt@ibm.com" },
]
maintainers = [
    { name = "Fred Araujo", email = "frederico.araujo@ibm.com" },
    { name = "Jonathan Springer", email = "redacted@ibm.com" },
    { name = "Teryl Taylor", email = "terylt@ibm.com" },
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "httpx[http2]>=0.28.1",
    "jinja2>=3.1.6",
    "mcp>=1.26.0",
    "orjson>=3.11.7",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "prometheus_client>=0.24.1",
    "pydantic-settings>=2.13.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]

# dev dependencies
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.1.5",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "twine>=6.2.0",
    "types-PyYAML>=6.0.0",
]

# documentation support
docs = [
    "griffe-pydantic",
    "griffe_inherited_docstrings",
    "mkdocs-awesome-nav",
    "mkdocs-click",
    "mkdocs-enumerate-headings-plugin",
    "mkdocs-include-markdown-plugin>=7.1.8",
    "mkdocs-jupyter",
    "mkdocs-material",
    "mkdocstrings[python]",
]

# gRPC transport support (higher performance than MCP/HTTP)
grpc = [
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "protobuf>=5.29.0",
]

# CLI dependencies
cli = [
    "typer>=0.21.2", # docling requires typer < 0.22
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cpex"]
